--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,51 @@
 .container {
-    position: relative;
-    width: 300px;
-    height: 200px;
-    margin: 0 auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%; /* 100% de la largeur de la fenêtre */
 }
 
-.gray-rectangle {
-    width: 100%;
-    height: 100%;
-    background-color: #ccc; /* Gris */
+.black-rectangle {
+    width: 2000px; /* 40 cm en pixels */
+    height: 3000px; /* 60 cm en pixels */
+    background-color: black;
 }
 
 .orange-rectangle {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100px;
-    height: 50px;
-    background-color: orange;
+    width: 1950px;
+    height: 2950px;
+    background: linear-gradient(to top right, #C69933, #725719); /* Dégradé linéaire de gauche à droite */
+}
+
+.competition {
+    position: absolute;
+    top: 75px; /* 1 cm en pixels (50 pixels avec 1 cm ≈ 50 pixels) */
+    left: 50%; /* Centrer horizontalement */
+    transform: translateX(-50%); /* Centrer horizontalement */
+    color: rgb(0, 0, 0); /* Couleur du texte */
+    font-size: 100px; /* Taille de la police */
+}
+
+.année {
+    position: absolute;
+    top: 200px; /* 1 cm en pixels (50 pixels avec 1 cm ≈ 50 pixels) */
+    left: 50%; /* Centrer horizontalement */
+    transform: translateX(-50%); /* Centrer horizontalement */
+    color: rgb(0, 0, 0); /* Couleur du texte */
+    font-size: 100px; /* Taille de la police */
+}
+
+.image {
+    position: absolute;
+    top: 50%; /* Centrer verticalement */
+    left: 50%; /* Centrer horizontalement */
+    transform: translate(-50%, -50%); /* Centrer horizontalement et verticalement */
+    width: 1800px;
+    height: 1800px;
+    max-width: 100%;
+    max-height: 100%;
 }
