Ajout de la feuille pour importer le produit dans WOO

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     position: absolute;
     width: 1950px;
     height: 2950px;
-    background: linear-gradient(to top right, #deb046, #725719); /* Dégradé linéaire de gauche à droite */
+    background: linear-gradient(to top right, #C59833, #73581A); /* Dégradé linéaire de gauche à droite */
 }
 
 .competition {
